<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:paddingStart="18dp"
            android:paddingTop="6dp"
            android:paddingEnd="18dp"
            android:text="@string/setting_general_label"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darkModeSwitch"
            style="@style/viewParent.headerText.settingsMiniTitle.icon"
            android:drawableStart="@drawable/baseline_dark_mode_24"
            android:text="@string/setting_dark_mode" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/colorSecondary" />


        <TextView
            android:id="@+id/tv_version"
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:textAlignment="center"
            tools:text="@string/setting_version" />

    </LinearLayout>
</ScrollView>