<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/nav_note">

    <fragment
        android:id="@+id/nav_note"
        android:name="com.wtg.notes.ui.note.NoteFragment"
        android:label="@string/note_fragment_label"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_noteFragment_to_addFragment"
            app:destination="@id/nav_add"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_add"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_noteFragment_to_detailFragment"
            app:destination="@id/nav_detail"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_detail"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_noteFragment_to_settingsFragment"
            app:destination="@id/nav_settings"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_detail"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_add"
        android:name="com.wtg.notes.ui.add.AddFragment"
        android:label="@string/add_fragment_label"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_noteFragment"
            app:destination="@id/nav_note"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_note"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_detail"
        android:name="com.wtg.notes.ui.detail.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_detailFragment_to_noteFragment"
            app:destination="@id/nav_note"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_note"
            app:popUpToInclusive="true" />
        <argument
            android:name="note"
            app:argType="com.wtg.notes.model.NoteModel" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.wtg.notes.ui.settings.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_noteFragment"
            app:destination="@id/nav_note"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_note"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>